--- a/_sass/1-tools/_syntax-highlighting.scss
+++ b/_sass/1-tools/_syntax-highlighting.scss
@@ -9,63 +9,63 @@
     background: var(--syntax-highlighting-background);
   }
 
-  .c     { color: #998; font-style: italic } // Comment
-  .err   { color: #a61717; background-color: #e3d2d2 } // Error
-  .k     { font-weight: bold } // Keyword
-  .o     { font-weight: bold } // Operator
-  .cm    { color: #998; font-style: italic } // Comment.Multiline
-  .cp    { color: #999; font-weight: bold } // Comment.Preproc
-  .c1    { color: #998; font-style: italic } // Comment.Single
-  .cs    { color: #999; font-weight: bold; font-style: italic } // Comment.Special
-  .gd    { color: #000; background-color: #fdd } // Generic.Deleted
-  .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
+  .c     { color: var(--syntax-comment); font-style: italic } // Comment
+  .err   { color: var(--syntax-error); background-color: var(--syntax-error-bg) } // Error
+  .k     { color: var(--syntax-keyword); font-weight: bold } // Keyword
+  .o     { color: var(--syntax-keyword); font-weight: bold } // Operator
+  .cm    { color: var(--syntax-comment); font-style: italic } // Comment.Multiline
+  .cp    { color: var(--syntax-comment); font-weight: bold } // Comment.Preproc
+  .c1    { color: var(--syntax-comment); font-style: italic } // Comment.Single
+  .cs    { color: var(--syntax-comment); font-weight: bold; font-style: italic } // Comment.Special
+  .gd    { color: var(--syntax-keyword); background-color: var(--syntax-error-bg) } // Generic.Deleted
+  .gd .x { color: var(--syntax-keyword); background-color: var(--syntax-error-bg) } // Generic.Deleted.Specific
   .ge    { font-style: italic } // Generic.Emph
-  .gr    { color: #a00 } // Generic.Error
-  .gh    { color: #999 } // Generic.Heading
-  .gi    { color: #000; background-color: #dfd } // Generic.Inserted
-  .gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
-  .go    { color: #888 } // Generic.Output
-  .gp    { color: #555 } // Generic.Prompt
+  .gr    { color: var(--syntax-error) } // Generic.Error
+  .gh    { color: var(--syntax-comment) } // Generic.Heading
+  .gi    { color: var(--syntax-keyword); background-color: var(--syntax-name) } // Generic.Inserted
+  .gi .x { color: var(--syntax-keyword); background-color: var(--syntax-name) } // Generic.Inserted.Specific
+  .go    { color: var(--syntax-comment) } // Generic.Output
+  .gp    { color: var(--syntax-comment) } // Generic.Prompt
   .gs    { font-weight: bold } // Generic.Strong
-  .gu    { color: #aaa } // Generic.Subheading
-  .gt    { color: #a00 } // Generic.Traceback
-  .kc    { font-weight: bold } // Keyword.Constant
-  .kd    { font-weight: bold } // Keyword.Declaration
-  .kp    { font-weight: bold } // Keyword.Pseudo
-  .kr    { font-weight: bold } // Keyword.Reserved
-  .kt    { color: #5d76bf; font-weight: bold } // Keyword.Type
-  .m     { color: #099 } // Literal.Number
-  .s     { color: #ec2355 } // Literal.String
-  .na    { color: #008080 } // Name.Attribute
-  .nb    { color: #0086B3 } // Name.Builtin
-  .nc    { color: #5d76bf; font-weight: bold } // Name.Class
-  .no    { color: #008080 } // Name.Constant
-  .ni    { color: #800080 } // Name.Entity
-  .ne    { color: #900; font-weight: bold } // Name.Exception
-  .nf    { color: #900; font-weight: bold } // Name.Function
-  .nn    { color: #555 } // Name.Namespace
-  .nt    { color: #4d65dc } // Name.Tag
-  .nv    { color: #008080 } // Name.Variable
-  .ow    { font-weight: bold } // Operator.Word
-  .w     { color: #bbb } // Text.Whitespace
-  .mf    { color: #099 } // Literal.Number.Float
-  .mh    { color: #099 } // Literal.Number.Hex
-  .mi    { color: #099 } // Literal.Number.Integer
-  .mo    { color: #099 } // Literal.Number.Oct
-  .sb    { color: #ec2355 } // Literal.String.Backtick
-  .sc    { color: #ec2355 } // Literal.String.Char
-  .sd    { color: #ec2355 } // Literal.String.Doc
-  .s2    { color: #ec2355 } // Literal.String.Double
-  .se    { color: #ec2355 } // Literal.String.Escape
-  .sh    { color: #ec2355 } // Literal.String.Heredoc
-  .si    { color: #ec2355 } // Literal.String.Interpol
-  .sx    { color: #ec2355 } // Literal.String.Other
-  .sr    { color: #009926 } // Literal.String.Regex
-  .s1    { color: #ec2355 } // Literal.String.Single
-  .ss    { color: #990073 } // Literal.String.Symbol
-  .bp    { color: #999 } // Name.Builtin.Pseudo
-  .vc    { color: #008080 } // Name.Variable.Class
-  .vg    { color: #008080 } // Name.Variable.Global
-  .vi    { color: #008080 } // Name.Variable.Instance
-  .il    { color: #099 } // Literal.Number.Integer.Long
+  .gu    { color: var(--syntax-comment) } // Generic.Subheading
+  .gt    { color: var(--syntax-error) } // Generic.Traceback
+  .kc    { color: var(--syntax-keyword); font-weight: bold } // Keyword.Constant
+  .kd    { color: var(--syntax-keyword); font-weight: bold } // Keyword.Declaration
+  .kp    { color: var(--syntax-keyword); font-weight: bold } // Keyword.Pseudo
+  .kr    { color: var(--syntax-keyword); font-weight: bold } // Keyword.Reserved
+  .kt    { color: var(--syntax-class); font-weight: bold } // Keyword.Type
+  .m     { color: var(--syntax-number) } // Literal.Number
+  .s     { color: var(--syntax-string) } // Literal.String
+  .na    { color: var(--syntax-name) } // Name.Attribute
+  .nb    { color: var(--syntax-builtin) } // Name.Builtin
+  .nc    { color: var(--syntax-class); font-weight: bold } // Name.Class
+  .no    { color: var(--syntax-name) } // Name.Constant
+  .ni    { color: var(--syntax-symbol) } // Name.Entity
+  .ne    { color: var(--syntax-function); font-weight: bold } // Name.Exception
+  .nf    { color: var(--syntax-function); font-weight: bold } // Name.Function
+  .nn    { color: var(--syntax-comment) } // Name.Namespace
+  .nt    { color: var(--syntax-tag) } // Name.Tag
+  .nv    { color: var(--syntax-name) } // Name.Variable
+  .ow    { color: var(--syntax-keyword); font-weight: bold } // Operator.Word
+  .w     { color: var(--syntax-comment) } // Text.Whitespace
+  .mf    { color: var(--syntax-number) } // Literal.Number.Float
+  .mh    { color: var(--syntax-number) } // Literal.Number.Hex
+  .mi    { color: var(--syntax-number) } // Literal.Number.Integer
+  .mo    { color: var(--syntax-number) } // Literal.Number.Oct
+  .sb    { color: var(--syntax-string) } // Literal.String.Backtick
+  .sc    { color: var(--syntax-string) } // Literal.String.Char
+  .sd    { color: var(--syntax-string) } // Literal.String.Doc
+  .s2    { color: var(--syntax-string) } // Literal.String.Double
+  .se    { color: var(--syntax-string) } // Literal.String.Escape
+  .sh    { color: var(--syntax-string) } // Literal.String.Heredoc
+  .si    { color: var(--syntax-string) } // Literal.String.Interpol
+  .sx    { color: var(--syntax-string) } // Literal.String.Other
+  .sr    { color: var(--syntax-regex) } // Literal.String.Regex
+  .s1    { color: var(--syntax-string) } // Literal.String.Single
+  .ss    { color: var(--syntax-symbol) } // Literal.String.Symbol
+  .bp    { color: var(--syntax-comment) } // Name.Builtin.Pseudo
+  .vc    { color: var(--syntax-name) } // Name.Variable.Class
+  .vg    { color: var(--syntax-name) } // Name.Variable.Global
+  .vi    { color: var(--syntax-name) } // Name.Variable.Instance
+  .il    { color: var(--syntax-number) } // Literal.Number.Integer.Long
 }
